Se añadio modulo de funcionalidad crear cuenta y carrito de compras
